# quicktill

./: .gitignore  FIXME  INSTALL  MANIFEST.in  Makefile  README  README.md  coalheavers.py  createdb  delivery.py  department.py  event.py  examplemenu.py  extras.py  foodcheck.py  foodorder.py  kbdrivers.py  keyboard.py  keycaps.py  magcard.py  make-release  manage.py  managekeyboard.py  managestock.py  managetill.py  pdrivers.py  plu.py  priceguess.py  printer.py  quicktill-debug-kbd  quicktill.py  recordwaste.py  register.py  release-notes.md  runtill  setup.cfg  setup.py  sqlalchemy-conversion-notes  stock.py  stocklines.py  (+7 more)
debian/: changelog  control  copyright  docs  quicktill24.manpages  rules  runtill.1
examples/: README  README.md  check-menu  convert-rules-to-triggers  createbulk.py  createdb  createdb.sql  dbsetup.toml  dbsetup.yml  emfcamp.py  examplemenu.py  haymakers.py  keycaps.py  make-xero-key.sh  minimal.py  oakdale.py  oakdalemenu.py  pembury-stockcontrol.py  pembury.py  pemburyglobal.py  quicktill.toml  sanity-check.sh  update-database-for-sqlalchemy  update-database-for-sqlalchemy.sql
quicktill/: __init__.py  barcode.py  bitcoin.py  btcmerch.py  card.py  cash.py  cmdline.py  config.py  dbsetup.py  dbutils.py  delivery.py  department.py  event.py  event_glib.py  extras.py  foodcheck.py  foodorder.py  jsonfoodorder.py  kbdrivers.py  keyboard.py  keyboard_gtk.py  linekeys.py  listen.py  localutils.py  lockscreen.py  magcard.py  managekeyboard.py  managestock.py  managetill.py  models.py  modifiers.py  monitor.py  oauth2.py  passwords.py  payment.py  (+31 more)
(+163 files in other folders)
