[metadata]
name = quicktill
version = 26.2
description = Quick till and stock control library
long_description = file: README.md
long_description_content_type = text/markdown
author = Stephen Early
author_email = steve@assorted.org.uk
url = https://github.com/sde1000/quicktill

[options]
packages =
    quicktill
    quicktill.tillweb
    quicktill.tillweb.migrations
install_requires =
    psycopg2 ~= 2.9
    reportlab
    httplib2
    sqlalchemy >= 2.0
    qrcode
    requests
    requests-oauthlib
    pycups
    python-dateutil
    cryptography
    pillow
python_requires = >=3.12

[options.extras_require]
tillweb = odfpy

[options.entry_points]
console_scripts =
    runtill = quicktill.till:main

[options.package_data]
quicktill.tillweb =
    static/tillweb/*.js
    static/tillweb/*.css
    static/tillweb/*/*.js
    static/tillweb/*/*.css
    static/tillweb/*/*/*.js
    static/tillweb/*/*/*.css
    templates/tillweb/*.html
    templates/tillweb/*.ajax

[flake8]
ignore = E711, E712, E741, W503, E402
max-line-length = 80
exclude = */migrations/
